# MirrorX

./: README.md
backend/candle-server/: .index.ts.swp  README.md  index.ts  package.json
backend/db/: README.md  db-cron.sh  db-init.ts  db.ts  docker-compose.yaml  index.ts  package.json  questdb-init.sql  schema.sql
backend/polling-server/: README.md  index.ts  notes.md  package.json  types.ts  utils.ts
backend/polling-server/db/: db-pusher.ts  db.ts
backend/trading-backend/: Cargo.toml  notes.md  test.sh
backend/trading-backend-stress-test/: benchx.go  go.mod
backend/trading-backend/src/: main.rs
backend/trading-backend/src/handlers/: balance.rs  mod.rs  order.rs  signup.rs
backend/trading-backend/src/types/: mod.rs  positions.rs  types.rs  users.rs  wallet.rs
backend/trading-engine/: .env  .gitignore  Cargo.toml
backend/trading-engine/src/: kafka.rs  main.rs
backend/trading-engine/src/handlers/: auth.rs  balance.rs  signup.rs
backend/trading-engine/src/types/: positions.rs  types.rs  users.rs
backend/trading-server/: README.md  docker-compose.yaml  index.ts  package.json  queue.ts  sendMail.ts  types.d.ts
backend/trading-server/poller/: poller.ts
backend/ws-server/: index.ts  package.json  types.ts  utils.ts
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/components/: Chart.tsx
