[package]
name = "trading-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
uuid = {version = "1.18.0", features = ["v4"]}

