[package]
name = "trading-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
axum = "0.8.4"
nanoid = "0.4.0"
redis = "0.32.5"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }

